<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#003D33"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primaryDarkColor"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/flamenco"
            android:hint="Set username"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/flamenco"
            android:hint="Set password"
            android:inputType="textPassword"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/flamenco"
            android:paddingTop="16dp"
            android:text="@string/login_button_label"
            android:textSize="20sp" />


    </LinearLayout>
</ScrollView>